src/test/deca/context/invalid/class/26_testCompletSimple.deca
/* Description:
    test invalide en utilisant class et sansObjet



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y;

      void setY( int x) {
        this.y = x;
      }

   }


{
   A a = new A ();
   int x = a.setY(x); // errure x n'est pas declare
}
